--- a/TuristickaAgencija.Mobile/TuristickaAgencija.Mobile/TuristickaAgencija.Mobile.csproj
+++ b/TuristickaAgencija.Mobile/TuristickaAgencija.Mobile/TuristickaAgencija.Mobile.csproj
@@ -68,6 +68,9 @@
     <EmbeddedResource Update="Views\NovostiDodajPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\ObavijestiPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\OcjeneKomentariPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
