--- a/TuristickaAgencija.Mobile/TuristickaAgencija.Mobile.UWP/TuristickaAgencija.Mobile.UWP.csproj
+++ b/TuristickaAgencija.Mobile/TuristickaAgencija.Mobile.UWP/TuristickaAgencija.Mobile.UWP.csproj
@@ -105,6 +105,7 @@
     <Content Include="confirm2.png" />
     <Content Include="logo.png" />
     <Content Include="noimage.png" />
+    <Content Include="otkazi.png" />
     <Content Include="Picture2.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LargeTile.scale-100.png" />
@@ -135,6 +136,7 @@
     <Content Include="Assets\Wide310x150Logo.scale-200.png" />
     <Content Include="Assets\Wide310x150Logo.scale-400.png" />
     <Content Include="rating1.PNG" />
+    <Content Include="refresh.png" />
     <Content Include="remove.png" />
     <Content Include="search.png" />
     <Content Include="user.png" />
