--- a/TuristickaAgencija.Mobile/TuristickaAgencija.Mobile/TuristickaAgencija.Mobile.csproj
+++ b/TuristickaAgencija.Mobile/TuristickaAgencija.Mobile/TuristickaAgencija.Mobile.csproj
@@ -38,6 +38,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="Views\AdminRezervacijePage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\AdminUplatePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
