--- a/TuristickaAgencija.WinUI/TuristickaAgencija.WinUI.csproj
+++ b/TuristickaAgencija.WinUI/TuristickaAgencija.WinUI.csproj
@@ -306,5 +306,9 @@
   <ItemGroup>
     <None Include="Resources\back1.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\logo.png" />
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
