--- a/TuristickaAgencija.Mobile/TuristickaAgencija.Mobile.UWP/TuristickaAgencija.Mobile.UWP.csproj
+++ b/TuristickaAgencija.Mobile/TuristickaAgencija.Mobile.UWP/TuristickaAgencija.Mobile.UWP.csproj
@@ -100,6 +100,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="addd.png" />
+    <Content Include="cicon.png" />
     <Content Include="comm1.png" />
     <Content Include="confirm.png" />
     <Content Include="confirm2.png" />
