--- a/TuristickaAgencija.Mobile/TuristickaAgencija.Mobile/TuristickaAgencija.Mobile.csproj
+++ b/TuristickaAgencija.Mobile/TuristickaAgencija.Mobile/TuristickaAgencija.Mobile.csproj
@@ -47,6 +47,9 @@
     <EmbeddedResource Update="Views\AdminUplatePodaciPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\IspitPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\KomentariPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
